# kl_shampoo_jax

./: .gitignore  HP_SWEEP_REPORT.md  PHASE6_REPORT.md  PHASE7V2_REPORT.md  PHASE7_REPORT.md  README.md  RSA_FINDINGS.md  WIDTH_FIX_EXPERIMENTS.md  kl_shampoo_init_section.tex  pyproject.toml
kl_shampoo_jax/: __init__.py  _core.py  _routing.py
tests/: test_against_torch.py  test_core.py  test_routing.py
